fix scrollbar show when h-line&v-line visible

--- a/front-end/h5/src/components/core/styles/align-guides.scss
+++ b/front-end/h5/src/components/core/styles/align-guides.scss
@@ -6,7 +6,7 @@
 // 垂直对齐参考线
 .v-line {
   position: absolute;
-  height: 100vh;
+  height: 100%;
   width: 1px;
   top: 0;
   background-color: #94f5ff;
@@ -16,7 +16,7 @@
 .h-line {
   position: absolute;
   height: 1px;
-  width: 100vh;
+  width: 100%;
   left: 0;
   background-color: #94f5ff;
 }
